@@ -3,6 +3,8 @@ plugins {
   id("otel.java-conventions")
 }
 
+val denyUnsafe = gradle.startParameter.projectProperties["denyUnsafe"] == "true"
+
 dependencies {
   implementation("com.linecorp.armeria:armeria-junit5:1.33.4")
   implementation("com.google.errorprone:error_prone_annotations")
@@ -10,6 +12,12 @@ dependencies {
   implementation("com.google.protobuf:protobuf-java-util:4.33.0")
   implementation("com.github.tomakehurst:wiremock-jre8:2.35.2")
   implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.20.0")
+  // we'll replace caffeine shaded in armeria with a later version that doesn't use Unsafe. Caffeine
+  // 3+ doesn't work with Java 8, but that is fine since --sun-misc-unsafe-memory-access=deny
+  // requires Java 23.
+  if (denyUnsafe) {
+    implementation("com.github.ben-manes.caffeine:caffeine:3.2.2")
+  }
 }
 
 tasks {
@@ -23,6 +31,12 @@ tasks {
 
     // Ensures tests are not affected by Armeria instrumentation
     relocate("com.linecorp.armeria", "io.opentelemetry.testing.internal.armeria")
+    if (denyUnsafe) {
+      relocate(
+        "com.github.benmanes.caffeine",
+        "io.opentelemetry.testing.internal.armeria.internal.shaded.caffeine"
+      )
+    }
     relocate("com.fasterxml.jackson", "io.opentelemetry.testing.internal.jackson")
     relocate("net.bytebuddy", "io.opentelemetry.testing.internal.bytebuddy")
     relocate("reactor", "io.opentelemetry.testing.internal.reactor")
@@ -61,6 +75,10 @@ tasks {
     // mergeServiceFiles requires that duplicate strategy is set to include
     filesMatching("META-INF/services/**") {
       duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    }
+    // exclude caffeine shaded in armeria
+    if (denyUnsafe) {
+      exclude("com/linecorp/armeria/internal/shaded/caffeine/**")
     }
 
     // relocate everything else
